[fixes] Wrap banner notification message and load relevant directives in Console app.

--- a/src/ui/public/notify/notify.less
+++ b/src/ui/public/notify/notify.less
@@ -92,5 +92,10 @@
   }
   .alert-banner {
     background-color: #c0c0c0;
+    padding: 10px 15px;
+  }
+
+  .toast-message {
+    white-space: normal;
   }
 }
